featured section added

--- a/style.css
+++ b/style.css
@@ -295,7 +295,54 @@ header {
 }
 
 
+/* featured section */
 
+
+
+.featured-container-main {
+    display: flex;
+    gap: 30px;
+    padding-bottom: 120px;
+
+
+}
+
+iframe {
+    border-radius: 24px 24px 0px 0px;
+}
+
+.featured-container-info {
+    padding: 24px;
+    background-color: #250D44;
+    border-radius: 0px 0px 24px 24px;
+}
+
+.featured-container-info h1 {
+    font-size: 24px;
+    font-weight: bold;
+    color: #FFFFFF;
+    margin-bottom: 12px;
+}
+
+.featured-container-info>p {
+    font-size: 16px;
+    line-height: 24px;
+    margin-bottom: 12px;
+    color: #FFFFFF;
+
+}
+
+.clock {
+    display: flex;
+    align-items: center;
+    gap: 6px;
+}
+
+.clock p {
+    color: #00FF88;
+    font-size: 16px;
+    line-height: 24px;
+}
 
 
 
@@ -489,6 +536,22 @@ header {
         font-size: 22px;
     }
 
+
+    /* featured section */
+
+    .featured-container-main {
+        display: flex;
+        flex-direction: column;
+
+        gap: 16px;
+        padding-bottom:40px;
+        margin: 0 20px;
+    }
+
+    iframe , .featured-container-info{
+        width: 100%
+    }
+
 }
 
 
@@ -512,7 +575,7 @@ header {
     .choose-container {
         display: grid;
         grid-template-columns: repeat(1, 1fr);
-        grid-template-rows: repeat(1, 225px);
+        grid-template-rows: repeat(1, 215px);
         gap: 16px;
         padding-bottom: 20px;
         margin: 0 20px;
@@ -541,6 +604,19 @@ header {
     .choose-container h1 {
         font-size: 22px;
     }
+
+     iframe , .featured-container-info{
+        width: 100%
+    }
+    .featured-container-main {
+        display: flex;
+        flex-direction: column;
+        gap: 16px;
+        padding-bottom:40px;
+        margin: 0 20px;
+    }
+
+
 }
 
 
@@ -566,7 +642,15 @@ header {
     }
 
     .choose-container {
-        
+
         margin: 0 20px;
     }
+
+    iframe , .featured-container-info{
+        width: 100%
+    }
+    .featured-container-main {
+        margin: 0 20px;
+    }
+
 }
