--- a/style.css
+++ b/style.css
@@ -50,6 +50,7 @@
     border-radius: 10000px;
     color: white;
     border: none;
+    cursor: pointer;
 
 
 }
@@ -100,6 +101,36 @@ header {
     font-weight: 500;
     cursor: pointer;
 }
+
+/* animation */
+.main-menu {
+    gap: 32px;
+}
+
+.main-menu p {
+    position: relative;
+    cursor: pointer;
+    padding-bottom: 6px;
+    font-weight: 500;
+}
+
+/* underline */
+.main-menu p::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 0;
+    height: 2px;
+    background-color: #6a00ff;
+    transition: width 0.3s ease;
+}
+
+/* hover effect */
+.main-menu p:hover::after {
+    width: 100%;
+}
+
 
 .mobile-menu {
     display: none;
@@ -294,6 +325,22 @@ header {
     color: #FFFFFF;
 }
 
+.choose-container-info {
+    background-color: rgba(53, 17, 101, 0.4);
+
+    transition:
+        transform 0.35s ease,
+        box-shadow 0.35s ease,
+        background-color 0.35s ease;
+}
+
+.choose-container-info:hover {
+    transform: scale(1.02);
+    background-color: rgba(53, 17, 101, 0.6);
+    box-shadow: 0 20px 40px rgba(0, 0, 0, 0.3);
+}
+
+
 
 /* featured section */
 
@@ -397,17 +444,74 @@ iframe {
 }
 
 .host-icon-main img {
-  transition: transform 0.3s ease;
+    transition: transform 0.3s ease;
 }
 
 .host-icon-main:hover img {
-  transform: scale(1.5);
-  background-color: #1A0B2E;
+    transform: scale(1.5);
+    background-color: #1A0B2E;
 }
 
 
+/* footer secton */
 
+footer {
+    background-image: url(./assets/footer-bg.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100%;
+    height: 100%;
+    padding: 95px 0;
 
+}
+
+.footer-main {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.footer-icon {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 40;
+    justify-items: center;
+    align-items: center;
+}
+
+.footer-icon-content {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 8px;
+    margin: 32px 0;
+
+}
+
+.footer-icon-content p {
+    font-size: 16px;
+    font-weight: 500;
+    color: #FFFFFF;
+}
+
+.copyright p {
+    font-size: 16px;
+    line-height: 24px;
+    color: #FFFFFF;
+    font-weight: 400;
+    text-align: center;
+
+}
+
+.footer-hr {
+    border: none;
+    height: 1px;
+    background-color: rgba(255, 255, 255, 0.2);
+    margin: 0 auto 5px;
+    width: 1200px;
+}
 
 
 
@@ -656,6 +760,75 @@ iframe {
         padding: 7px;
     }
 
+
+
+    /* footer */
+
+    footer {
+        background-image: url(./assets/footer-bg.png);
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        width: 100%;
+        height: 100%;
+        padding: 20px 20px;
+    }
+
+    .footer-main {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+
+    }
+
+    .footer-logo img {
+        width: 219px;
+        height: 32px;
+    }
+
+    .footer-icon {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        gap: 0;
+        justify-items: center;
+        align-items: center;
+        place-items: center;
+        margin: 24px 0;
+    }
+
+    .footer-icon-content {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 8px;
+        margin: 5px;
+
+    }
+
+    .footer-icon-content p {
+        font-size: 16px;
+        font-weight: 500;
+        color: #FFFFFF;
+    }
+
+    .copyright p {
+        font-size: 16px;
+        line-height: 24px;
+        color: #FFFFFF;
+        font-weight: 400;
+
+    }
+
+    .footer-hr {
+        border: none;
+        height: 1px;
+        background-color: rgba(255, 255, 255, 0.2);
+        margin: 0 auto 5px;
+        width: 100%
+    }
+
+
 }
 
 
@@ -721,13 +894,15 @@ iframe {
         padding-bottom: 40px;
         margin: 0 20px;
     }
- .host-icon {
+
+    .host-icon {
         display: flex;
         align-items: flex-start;
         gap: 8px;
         justify-content: flex-start;
     }
-    .host{
+
+    .host {
         margin: 0 20px;
     }
 
@@ -771,7 +946,13 @@ iframe {
 
     .host {
         margin: 0 20px;
-        
+
     }
+
+.footer-hr {
+  width: 900px;
+  margin: 5px auto ;
+  
+}
 
 }
