--- a/style.css
+++ b/style.css
@@ -136,10 +136,35 @@ header {
     display: none;
 }
 
+/* animation */
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+.fade {
+  opacity: 0;
+  animation: fadeIn 1s ease forwards;
+}
+
+.fade-1 { animation-delay: 0.1s; }
+.fade-2 { animation-delay: 1.5s; }
+.fade-3 { animation-delay: 2s; }
+.fade-4 { animation-delay: 3s; }
+.fade-5 { animation-delay: 4s; }
+.fade-6 { animation-delay: 4.7s; }
+
+
+
+
 .banner {
     position: relative;
     height: 720px;
-    /* প্রয়োজন অনুযায়ী */
     background-image: url("./assets/hero-bg.png");
     background-size: cover;
     background-position: center;
@@ -476,7 +501,7 @@ footer {
 .footer-icon {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    gap: 40;
+    gap: 0px;
     justify-items: center;
     align-items: center;
     
@@ -523,6 +548,7 @@ footer {
 
 
 
+
 /* responsive for small device 576px */
 
 @media screen and (max-width:576px) {
@@ -553,6 +579,16 @@ footer {
     .banner {
         height: 466px;
     }
+     /* .banner {
+    position: relative;
+    height: 720px;
+    background-image: url("./assets/hero-bg.png");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 100%;
+} */
 
     .center-img {
         position: absolute;
@@ -775,7 +811,7 @@ footer {
         background-size: cover;
         width: 100%;
         height: 100%;
-        padding: 20px 20px;
+        padding: 20px 0;
     }
 
     .footer-main {
